--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.7",
     "lucide-vue-next": "^0.541.0",
     "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
