--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.11.8",
     "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.7",
+    "firebase": "^12.2.1",
     "lucide-vue-next": "^0.541.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
