--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@primeuix/themes": "^1.2.3",
+    "@types/leaflet": "^1.9.20",
     "bootstrap": "^5.3.7",
     "firebase": "^12.2.1",
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.541.0",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
