--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
+    "@fullcalendar/vue3": "^6.1.19",
     "@popperjs/core": "^2.11.8",
     "@primeuix/themes": "^1.2.3",
     "@types/leaflet": "^1.9.20",
