--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
     "@primeuix/themes": "^1.2.3",
     "@types/leaflet": "^1.9.20",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "firebase": "^12.2.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.541.0",
+    "papaparse": "^5.5.3",
     "pinia": "^3.0.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
@@ -44,6 +49,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
+    "@types/papaparse": "^5.3.16",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vitest/eslint-plugin": "^1.3.4",
