--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fullcalendar/vue3": "^6.1.19",
     "@popperjs/core": "^2.11.8",
     "@primeuix/themes": "^1.2.3",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/leaflet": "^1.9.20",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
