--- a/src/.env.example
+++ b/src/.env.example
@@ -28,3 +28,9 @@ NODE_ENV=development
 # App Configuration
 VITE_APP_NAME=YouthLink
 VITE_APP_VERSION=1.0.0
+
+# EmailJS Configuration
+# Get your EmailJS credentials from https://www.emailjs.com/
+VITE_EMAILJS_SERVICE_ID=your_service_id_here
+VITE_EMAILJS_TEMPLATE_ID=your_template_id_here
+VITE_EMAILJS_PUBLIC_KEY=your_public_key_here
