--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/list": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@fullcalendar/vue3": "^6.1.19",
+    "@google/generative-ai": "^0.24.1",
     "@popperjs/core": "^2.11.8",
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.58.0",
