--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start": "node server.js"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -30,9 +31,14 @@
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.58.0",
     "@types/leaflet": "^1.9.20",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^12.2.1",
+    "firebase-admin": "^13.5.0",
+    "firebase-functions": "^6.5.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
